Gnumeric 1.12.57

Morten:
	* Fix touchpad scrolling on Wayland.  [#678]
	* Fix ods auto-filter import problem.
	* Fix xml import and export of auto-filters.
	* Fix problem with percent-of-range auto-filters with blanks.
	* New UNIQUE function.
	* New FLT.RADIX and FLT.NEXTAFTER functions (for testing).

--------------------------------------------------------------------------
Gnumeric 1.12.56

Hubert Figuière:
	* Fix tooltip problem on Wayland.

Morten:
	* FLOOR, CEILING: Improve xl compatibility.  [#703]
	* Fix dependency problems with arrays.  [#725] [#647]
	* Improve clipboard pasting from firefox.  [#733]
	* Fix number-stringification for E-numbers.  [#719]
	* Improve generation of random integers.
	* Work around cairo performance problem re anting.  [#736]
	* Fix HTML export problem with underline.

--------------------------------------------------------------------------
Gnumeric 1.12.55

Morten:
	* Fix problem making new objects invisble.  [#694]

--------------------------------------------------------------------------
Gnumeric 1.12.54

John Denker:
	* Improve whitespace handling in html import.  [#671]

Morten:
	* Improve various desktop environments' icon discovery.  [#677]
	* New function ENCODEURL.  [#658]
	* New libpython configuration.  [#680]
	* Fix problem relating to sheet remove and conditional format.
	* Fix inconsistent rounding of half-way cases.  [#638]
	* Fix xlsx leaks.
	* Cell comment speed-ups.  [#692]

--------------------------------------------------------------------------
Gnumeric 1.12.53

Morten:
	* Fix xlsx import of T.INV.
	* Fix inter-process array paste problem.  [#634]
	* Fix problem with xlsx number format 14.
	* Fix problems with complex number rendering.  [#638]
	* Fix near-denormal parsing case.  [#656]
	* Fix mildly crazy ROUND edge cases.  [#661]
	* Fix dialog reuse problem.  [#657]
	* Fix sc import problem.  [#663]
	* Work a little hard at avoiding -0.  [#652]
	* Fix html import problem.  [#669]