@@ -7,6 +7,7 @@ Morten:
 	* Fix problem with percent-of-range auto-filters with blanks.
 	* New UNIQUE function.
 	* New FLT.RADIX and FLT.NEXTAFTER functions (for testing).
+	* New experimental --with-decimal64 for base-10 math.
 
 --------------------------------------------------------------------------
 Gnumeric 1.12.56
